[tool.poetry]
name = "mc_form"
version = "0.1.0"
description = ""
authors = ["carlosavellaneda8 <carlos.avellaneda8@gmail.com>"]
packages = [
    {include = "mc_form"},
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.13.0"
pyairtable = "^1.3.0"
wordcloud = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
